[gd_scene load_steps=15 format=3 uid="uid://cqut2b0xq40h2"]

[ext_resource type="Script" path="res://game/board.gd" id="1_p3lbp"]
[ext_resource type="PackedScene" uid="uid://5ija1uwlk7ah" path="res://game/prefabs/flipper.tscn" id="2_b56oe"]
[ext_resource type="Texture2D" uid="uid://b4e060roo2v57" path="res://game/textures/soccer_field.jpeg" id="2_dxagu"]
[ext_resource type="PackedScene" uid="uid://uatxtlgdvkuc" path="res://game/prefabs/launcher.tscn" id="3_nrpq8"]
[ext_resource type="PackedScene" uid="uid://do84g1t6y24al" path="res://game/prefabs/corner.tscn" id="4_vyhdi"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6yw8q"]
size = Vector3(9, 1, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ipeh"]
albedo_texture = ExtResource("2_dxagu")
metallic = 0.5
roughness = 0.0
uv1_scale = Vector3(2, 2, 1)
uv1_offset = Vector3(0.5, 2.08165e-12, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_4deb5"]
material = SubResource("StandardMaterial3D_3ipeh")
size = Vector3(9, 1, 16)

[sub_resource type="BoxShape3D" id="BoxShape3D_rg7u1"]
size = Vector3(1, 1, 16)

[sub_resource type="BoxShape3D" id="BoxShape3D_bkykl"]
size = Vector3(0.5, 0.5, 6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ugg21"]
albedo_color = Color(0.858824, 0, 0.109804, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fcgns"]
material = SubResource("StandardMaterial3D_ugg21")
size = Vector3(0.5, 0.5, 6)

[sub_resource type="CylinderMesh" id="CylinderMesh_c36je"]
height = 0.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_e5765"]
points = PackedVector3Array(-0.089396, 0.25, 0.477152, -0.0920301, -0.249313, -0.491212, -0.153382, -0.249152, -0.475524, 0.0921237, -0.249306, 0.491198, 0.462206, 0.25, -0.149087, -0.477152, 0.25, -0.089396, -0.45843, -0.248208, 0.198672, 0.491212, -0.249313, -0.0920301, 0.0894894, 0.25, -0.477152, 0.387663, 0.25, 0.298174, 0.304512, -0.247293, -0.395903, -0.45843, -0.248208, -0.198672, -0.298174, 0.25, -0.387663, 0.45843, -0.248208, 0.198672, -0.38757, 0.25, 0.298174, -0.229567, -0.248595, 0.443887, 0.253429, 0.25, 0.417462, 0.477152, 0.25, 0.089396, 0.387663, 0.25, -0.298174, 0.304512, -0.247293, 0.395903, -0.089396, 0.25, -0.477152, 0.0921237, -0.249306, -0.491198, -0.491212, -0.249313, 0.0920301, -0.477152, 0.25, 0.089396, -0.304512, -0.247293, -0.395903, 0.426902, -0.247627, -0.25916, -0.38757, 0.25, -0.298174, 0.253429, 0.25, -0.417462, -0.253429, 0.25, 0.417462, -0.382648, -0.248619, 0.321462, 0.0894894, 0.25, 0.477152, -0.0920301, -0.249313, 0.491212)

[node name="Node3D" type="Node3D"]

[node name="board" type="StaticBody3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
script = ExtResource("1_p3lbp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="board"]
transform = Transform3D(1, 0, 0, 0, 1, 7.56764e-09, 0, 1.07215e-08, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_6yw8q")

[node name="MeshInstance3D" type="MeshInstance3D" parent="board"]
transform = Transform3D(1, -3.73952e-24, 0, -1.21652e-31, 1, 7.56764e-09, 0, 1.07215e-08, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_4deb5")

[node name="rail_right" type="StaticBody3D" parent="board"]
transform = Transform3D(1, 1.05879e-22, -1.05879e-22, -1.05879e-22, 1, 1.05879e-22, 1.05879e-22, -1.05879e-22, 1, 5.08731, 1.04445, 1.40968e-15)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="board/rail_right"]
transform = Transform3D(1, 1.58819e-22, -1.58819e-22, -1.58819e-22, 1, 1.58819e-22, 1.58819e-22, -1.58819e-22, 1, 0, 0, 2.08165e-12)
shape = SubResource("BoxShape3D_rg7u1")

[node name="rail_left" type="StaticBody3D" parent="board"]
transform = Transform3D(1, 1.58819e-22, -1.58819e-22, -1.58819e-22, 1, 1.58819e-22, 1.58819e-22, -1.58819e-22, 1, -5.08972, 1.00081, -2.12482e-15)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="board/rail_left"]
transform = Transform3D(1, 1.58819e-22, -1.47458e-22, -1.58819e-22, 1, 1.47458e-22, 1.47458e-22, -1.47458e-22, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("BoxShape3D_rg7u1")

[node name="rail_top" type="StaticBody3D" parent="board"]
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, -0.0595762, 1.02387, -8.51473)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="board/rail_top"]
transform = Transform3D(1, 1.58819e-22, -1.47458e-22, -1.58819e-22, 1, 1.47458e-22, 1.47458e-22, -1.47458e-22, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("BoxShape3D_rg7u1")

[node name="channel" type="StaticBody3D" parent="board"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 3.32396, 0.789044, 3.96454)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="board/channel"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("BoxShape3D_bkykl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="board/channel"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_fcgns")

[node name="channel2" type="StaticBody3D" parent="board"]
transform = Transform3D(0.941759, 1.37607e-16, 0.33629, -9.69797e-17, 1, -1.37607e-16, -0.33629, 9.69798e-17, 0.941759, -3.00248, 0.782881, 3.80738)
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="board/channel2"]
transform = Transform3D(1, -4.01999e-24, -8.09915e-09, -1.96455e-23, 1, 2.33292e-23, 1.53416e-08, -3.57915e-23, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_bkykl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="board/channel2"]
transform = Transform3D(1, -1.36369e-22, -2.30003e-08, -3.99205e-23, 1, 4.9799e-23, 2.9893e-08, -6.22613e-23, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
mesh = SubResource("BoxMesh_fcgns")

[node name="StaticBody3D2" type="StaticBody3D" parent="board"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, -2.11829, 0.773112, -3.95075)
input_ray_pickable = false

[node name="MeshInstance3D2" type="MeshInstance3D" parent="board/StaticBody3D2"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_c36je")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="board/StaticBody3D2"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_e5765")

[node name="StaticBody3D2" type="StaticBody3D" parent="board/StaticBody3D2"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 2.97026, 0.000583291, -2.06977)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="board/StaticBody3D2/StaticBody3D2"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_c36je")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="board/StaticBody3D2/StaticBody3D2"]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_e5765")

[node name="corner" parent="board" instance=ExtResource("4_vyhdi")]
transform = Transform3D(-0.00221653, 6.98346e-16, 0.999998, 7.7401e-19, 1, -6.98346e-16, -0.999997, -7.73923e-19, -0.00221657, -3.94641, 0.804755, -0.198183)

[node name="corner2" parent="board" instance=ExtResource("4_vyhdi")]
transform = Transform3D(0.999999, 2.31319e-19, 0.000663269, -2.31162e-19, 1, -2.30983e-19, -0.000663232, 2.30949e-19, 1, -3.94641, 0.804755, -7.39463)

[node name="corner3" parent="board" instance=ExtResource("4_vyhdi")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 0.999999, -3.48787e-16, -4.37114e-08, 4.06818, 0.804755, -7.60919)
input_ray_pickable = false

[node name="flipper_right" parent="board" instance=ExtResource("2_b56oe")]
transform = Transform3D(1, -1.21652e-31, 0, -1.21652e-31, 1, 0, 0, 0, 1, 2.4402, 0.805229, 7.14405)

[node name="flipper_left" parent="board" instance=ExtResource("2_b56oe")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, -2.02022, 0.805229, 7.17677)
reversed = true

[node name="launcher" parent="." instance=ExtResource("3_nrpq8")]
transform = Transform3D(-4.37114e-08, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, -4.37114e-08, 4.08587, 0.804057, 6.08691)
node_b = NodePath("../board")

[connection signal="input_event" from="board" to="board" method="_on_input_event"]
